# agent_design

./: .env.prod.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  .pre-commit-config.yaml  alembic.ini  pyproject.toml
backend/alembic/: script.py.mako
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  langchain_assistant.py  prompts.py
backend/app/agents/tools/: __init__.py  datetime_tool.py
backend/app/api/: deps.py
backend/app/api/routes/v1/: __init__.py  agent.py  auth.py  conversations.py  health.py  items.py  users.py  ws.py
backend/app/clients/: __init__.py
backend/app/core/: config.py  csrf.py  security.py
backend/app/db/: session.py
backend/app/db/models/: conversation.py  item.py  user.py
backend/app/repositories/: __init__.py  conversation.py  item.py  user.py
backend/app/schemas/: __init__.py  base.py  conversation.py  item.py  token.py  user.py
backend/app/services/: __init__.py  conversation.py  item.py  user.py
backend/cli/: commands.py
backend/tests/: conftest.py  test_agents.py  test_commands.py  test_core.py  test_repositories.py  test_security.py  test_services.py
backend/tests/api/: test_auth.py  test_exceptions.py  test_health.py  test_items.py  test_metrics.py  test_users.py
docs/: adding_features.md  architecture.md  patterns.md  testing.md
frontend/: .env.example  instrumentation.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts  vitest.setup.ts
frontend/e2e/: auth.setup.ts  auth.spec.ts  chat.spec.ts  home.spec.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/hooks/: index.ts  use-auth.ts  use-chat.ts  use-conversations.ts
frontend/src/lib/: api-client.ts  constants.ts  (+1 more)
make_script4win/: clean.cmd  create-admin.cmd  format.cmd  help.cmd  install.cmd  lint.cmd  routes.cmd  run-prod.cmd  run.cmd  test-cov.cmd  test.cmd  user-create.cmd  user-list.cmd
(+30 files in other folders)
